--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestión de Ministerios Musicales</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-updated.css">
   <script src="script.js" defer></script>
 </head>
 <body>
